<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/light_grey"
    android:clipToPadding="false"
    android:clipChildren="false">
    <prashushi.farcon.CircularImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/im_thumb"
        android:src="@drawable/onion"
        android:elevation="10dp"
        android:layout_centerVertical="true"/>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="55dp"
        android:paddingLeft="50dp"
        android:elevation="5dp"
        android:background="@drawable/white">


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/item_name"
    android:id="@+id/tv_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
    android:textStyle="bold"
    android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/tv_price"
        android:layout_below="@id/tv_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignParentRight="true"
        android:id="@+id/bt_add"
        style="@style/MyButton"
        android:background="@drawable/button"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingTop="8dp"
        android:layout_below="@id/tv_name"
        android:layout_toLeftOf="@id/bt_add">
        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/MyButton"
            android:background="@drawable/minus"
            android:id="@+id/bt_minus"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:text="1"
            android:padding="3dp"
            android:background="@drawable/box"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:id="@+id/et_quantity"/>
        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/plus"
            style="@style/MyButton"
            android:id="@+id/bt_plus"/>
    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

