<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="prashushi.farcon.WelcomeActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/tv_verify"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="Verify"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_verify"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <EditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:hint="Enter OTP"
                android:inputType="number"
                android:textColorHint="#FE0000"
                android:textSize="20dp"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:id="@+id/tv_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/input_layout_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiving_otp"
                android:textColor="@color/greydark"
                />
            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/resend"
                android:textColor="#FE0000"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tv_container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_container"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_num_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/re_enter_num"
                android:textColor="#FE0000"
                android:textStyle="bold"
                />

        </LinearLayout>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_above="@+id/tv_container2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:src="@drawable/otp" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
